--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "lucide-react": "0.292.0",
     "zustand": "4.4.1",
     "gsap": "^3.12.2",
-    "react-use-gesture": "^10.2.26",
-    "react-intersection-observer": "^9.5.2",
-    "react-spring": "^9.7.3"
+    "react-use-gesture": "^9.1.3",
+    "react-intersection-observer": "^9.5.2"
   },
   "devDependencies": {
     "typescript": "5.2.2",
